--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<h1 class="banner-main__title">pilot telematics</h1>
 								<p class="banner-main__sub-title">IoT software and hardware Solutions</p>
 							</div>
-							<picture><source srcset="img/main.webp" type="image/webp"><img class="banner-main__img" src="img/main.png" alt="pilot telematics"></picture>
+							<img class="banner-main__img" src="img/main.png" alt="pilot telematics">
 							<div class="banner-main__btns">
 								<a class="banner-main__btn1 btn-free" href="/">Try it free</a>
 								<a class="banner-main__btn2 btn-more" href="/">About products</a>
@@ -142,8 +142,8 @@
 				<div class="gallery">
 					<div class="container gallery__container">
 						<div class="gallery__body">
-							<picture><source srcset="img/main.webp.webp" type="image/webp"><img class="gallery__img" src="img/main1jpg.jpg" alt="PICTURE"></picture>
-							<picture><source srcset="img/main2.webp" type="image/webp"><img class="gallery__img" src="img/main2.jpg" alt="PICTURE"></picture>
+							<img class="gallery__img" src="img/main1jpg.jpg" alt="PICTURE">
+							<img class="gallery__img" src="img/main2.jpg" alt="PICTURE">
 						</div>
 						<a class="gallery__link btn-free" href="/">try it for free</a>
 					</div>
