--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
-	 <head>
+ <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221228074530">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221228093930">
 	<title>Главная</title>
 </head>
-	<body>
-		<div class="wrapper">
-			<header class="header">
+
+<body>
+	<div class="wrapper">
+		<header class="header">
 	<div class="container">
 		<div class="header__body">
 			<a href="/">
@@ -60,128 +61,184 @@
 		</div>
 	</div>
 </header>
-			<main class="main">
-				<div class="banner-main">
-					<div class="container">
-						<div class="banner-main__body">
-							<div class="banner-main__content">
-								<h1 class="banner-main__title">pilot telematics</h1>
-								<p class="banner-main__sub-title">IoT software and hardware Solutions</p>
-							</div>
-							<img class="banner-main__img" src="img/main.png" alt="pilot telematics">
-							<div class="banner-main__btns">
-								<a class="banner-main__btn1 btn-free" href="/">Try it free</a>
-								<a class="banner-main__btn2 btn-more" href="/">About products</a>
-							</div>
+		<main class="main">
+			<div class="banner-main">
+				<div class="container">
+					<div class="banner-main__body">
+						<div class="banner-main__content">
+							<h1 class="banner-main__title">pilot telematics</h1>
+							<p class="banner-main__sub-title">IoT software and hardware Solutions</p>
+						</div>
+						<picture><source srcset="img/main.webp" type="image/webp"><img class="banner-main__img" src="img/main.png" alt="pilot telematics"></picture>
+						<div class="banner-main__btns">
+							<a class="banner-main__btn1 btn-free" href="/">Try it free</a>
+							<a class="banner-main__btn2 btn-more" href="/">About products</a>
 						</div>
 					</div>
 				</div>
-				<div class="numbers">
-					<div class="container">
-						<div class="numbers__body">
-							<div class="numbers__item item-blue">
-								<span class="numbers__item-top">13</span>
-								<span class="numbers__item-bottom">years of work in the telematics market</span>
-							</div>
-							<div class="numbers__item item-red">
-								<span class="numbers__item-top red">1 000 000 +</span>
-								<span class="numbers__item-bottom">tracked objects all the world</span>
-							</div>
-							<div class="numbers__item item-orange">
-								<span class="numbers__item-top orange">12</span>
-								<span class="numbers__item-bottom">countries of presence</span>
-							</div>
-							<div class="numbers__item item-green">
-								<span class="numbers__item-top green">129</span>
-								<span class="numbers__item-bottom">partners we have worldwide</span>
-							</div>
+			</div>
+			<div class="numbers">
+				<div class="container">
+					<div class="numbers__body">
+						<div class="numbers__item item-blue">
+							<span class="numbers__item-top">13</span>
+							<span class="numbers__item-bottom">years of work in the telematics market</span>
+						</div>
+						<div class="numbers__item item-red">
+							<span class="numbers__item-top red">1 000 000 +</span>
+							<span class="numbers__item-bottom">tracked objects all the world</span>
+						</div>
+						<div class="numbers__item item-orange">
+							<span class="numbers__item-top orange">12</span>
+							<span class="numbers__item-bottom">countries of presence</span>
+						</div>
+						<div class="numbers__item item-green">
+							<span class="numbers__item-top green">129</span>
+							<span class="numbers__item-bottom">partners we have worldwide</span>
 						</div>
 					</div>
 				</div>
-				<section class="product">
-					<div class="container">
-						<div class="product__body">
-							<h3 class="product__title title">
-								PRODUCT FROM PILOT
-							</h3>
-							<p class="product__text">
-								<span class="blue">More than 1,000 models</span> of sensors, wired and wireless systems, video cameras are integrated into the system, which transmit information from one deviceto another.
+			</div>
+			<section class="product">
+				<div class="container">
+					<div class="product__body">
+						<h3 class="product__title title">
+							PRODUCT FROM PILOT
+						</h3>
+						<p class="product__text">
+							<span class="blue">More than 1,000 models</span> of sensors, wired and wireless systems, video cameras are
+							integrated into the system, which transmit information from one deviceto another.
+						</p>
+					</div>
+					<div class="product__cards">
+						<div class="product__card">
+							<img class="product__img" src="img/card1.svg" alt="product">
+							<h4 class="product__card-title">PILOT. <span class="pr-blue">Telematics</span></h4>
+							<p class="product__card-text">Monitoring of commercial vehicles, control of fuel, driving style, axle
+								load, travel time, etc.</p>
+							<a class="product__card-link btn-more" href="/">More</a>
+						</div>
+						<div class="product__card">
+							<img class="product__img" src="img/card2.svg" alt="product">
+							<h4 class="product__card-title">PILOT. <span class="pr-green">Logistics</span></h4>
+							<p class="product__card-text">Construction of delivery routes and distribution of cargo to cars, own and
+								attracted. Organization of work
+								of couriers.</p>
+							<a class="product__card-link btn-more" href="/">More</a>
+						</div>
+						<div class="product__card pr-hide">
+							<img class="product__img" src="img/card3.svg" alt="product">
+							<h4 class="product__card-title">PILOT. <span class="pr-greeny">People</span></h4>
+							<p class="product__card-text">Monitoring and planning the movement of employees
+								of courier services, trading companies, mines, industrial and warehouse sites, including indoors.</p>
+							<a class="product__card-link btn-more" href="/">More</a>
+						</div>
+						<div class="product__card pr-hide">
+							<img class="product__img" src="img/card4.svg" alt="product">
+							<h4 class="product__card-title">PILOT. <span class="pr-orange">Autoconductor</span></h4>
+							<p class="product__card-text">Passenger traffic management based on data. Passenger counting and payment
+								arrangements.</p>
+							<a class="product__card-link btn-more" href="/">More</a>
+						</div>
+					</div>
+					<a class="product__more btn-free" href="/">SEE ALL PILOT PRODUCTS</a>
+				</div>
+			</section>
+			<div class="gallery">
+				<div class="container gallery__container">
+					<div class="gallery__body">
+						<picture><source srcset="img/main.webp.webp" type="image/webp"><img class="gallery__img" src="img/main1jpg.jpg" alt="PICTURE"></picture>
+						<picture><source srcset="img/main2.webp" type="image/webp"><img class="gallery__img" src="img/main2.jpg" alt="PICTURE"></picture>
+					</div>
+					<a class="gallery__link btn-free" href="/">try it for free</a>
+				</div>
+			</div>
+			<section class="about">
+				<div class="container">
+					<div class="about__body">
+						<h3 class="about__title title">ABOUT PILOT TELEMATICS</h3>
+						<div class="about__content">
+							<p class="about__blue">The system analyzes data, builds models, offers optimal solutions, predicts risks
 							</p>
-						</div>
-						<div class="product__cards">
-							<div class="product__card">
-								<img class="product__img" src="img/card1.svg" alt="product">
-								<h4 class="product__card-title">PILOT. <span class="pr-blue">Telematics</span></h4>
-								<p class="product__card-text">Monitoring of commercial vehicles, control of fuel, driving style, axle load, travel time, etc.</p>
-								<a class="product__card-link btn-more" href="/">More</a>
-							</div>
-							<div class="product__card">
-								<img class="product__img" src="img/card2.svg" alt="product">
-								<h4 class="product__card-title">PILOT. <span class="pr-green">Logistics</span></h4>
-								<p class="product__card-text">Construction of delivery routes and distribution of cargo to cars, own and attracted. Organization of work
-									of couriers.</p>
-								<a class="product__card-link btn-more" href="/">More</a>
-							</div>
-							<div class="product__card pr-hide">
-								<img class="product__img" src="img/card3.svg" alt="product">
-								<h4 class="product__card-title">PILOT. <span class="pr-greeny">People</span></h4>
-								<p class="product__card-text">Monitoring and planning the movement of employees 
-									of courier services, trading companies, mines, industrial and warehouse sites, including indoors.</p>
-								<a class="product__card-link btn-more" href="/">More</a>
-							</div>
-							<div class="product__card pr-hide">
-								<img class="product__img" src="img/card4.svg" alt="product">
-								<h4 class="product__card-title">PILOT. <span class="pr-orange">Autoconductor</span></h4>
-								<p class="product__card-text">Passenger traffic management based on data. Passenger counting and payment arrangements.</p>
-								<a class="product__card-link btn-more" href="/">More</a>
-							</div>
-						</div>
-						<a class="product__more btn-free" href="/">SEE ALL PILOT PRODUCTS</a>
-					</div>
-				</section>
-				<div class="gallery">
-					<div class="container gallery__container">
-						<div class="gallery__body">
-							<img class="gallery__img" src="img/main1jpg.jpg" alt="PICTURE">
-							<img class="gallery__img" src="img/main2.jpg" alt="PICTURE">
-						</div>
-						<a class="gallery__link btn-free" href="/">try it for free</a>
-					</div>
-				</div>
-				<section class="about">
-					<div class="container">
-						<div class="about__body">
-							<h3 class="about__title title">ABOUT PILOT TELEMATICS</h3>
-							<div class="about__content">
-								<p class="about__blue">The system analyzes data, builds models, offers optimal solutions, predicts risks</p>
-								<div class="about__right">
-									<p class="about__text">It gives you the opportunity to receive different types of reports, monitor the situation in real time, return to history and photo and video recording</p>
-									<ul class="about__list">
-										<li class="about__list-item">it is convenient with us, we adapt to you
-											works on any device
-											</li>
-										<li class="about__list-item">flexibly customizable to your business processes
-											</li>
-										<li class="about__list-item">integrates with all CRM and ERP systems
-											</li>
-										<li class="about__list-item">round-the-clock technical support without long waits and switching
-											</li>
-									</ul>
-									<div class="banner-main__btns about__btns">
-										<a class="banner-main__btn1 btn-more about__btn1" href="/">Read More</a>
-										<a class="banner-main__btn2 btn-free about__btn2" href="/">Try it free</a>
-									</div>
+							<div class="about__right">
+								<p class="about__text">It gives you the opportunity to receive different types of reports, monitor the
+									situation in real time, return to history and photo and video recording</p>
+								<ul class="about__list">
+									<li class="about__list-item">it is convenient with us, we adapt to you
+										works on any device
+									</li>
+									<li class="about__list-item">flexibly customizable to your business processes
+									</li>
+									<li class="about__list-item">integrates with all CRM and ERP systems
+									</li>
+									<li class="about__list-item">round-the-clock technical support without long waits and switching
+									</li>
+								</ul>
+								<div class="banner-main__btns about__btns">
+									<a class="banner-main__btn1 btn-more about__btn1" href="/">Read More</a>
+									<a class="banner-main__btn2 btn-free about__btn2" href="/">Try it free</a>
 								</div>
 							</div>
 						</div>
 					</div>
-				</section>
-			</main>
-			<footer class="footer">
+				</div>
+			</section>
+			<section class="portfolio">
+				<div class="container">
+					<div class="portfolio__body">
+						<div class="portfolio__top">
+							<h3 class="portfolio__title title">OUR PORTFOLIO</h3>
+							<a class="portfolio__link btn-free desc-2" href="/">see more cases</a>
+						</div>
+						<div class="portfolio__bottom">
+							<div class="portfolio__bottom-item">
+								<div class="portfolio__problem">
+									<h6 class="portfolio__problem-title">PROBLEM</h6>
+									<p class="portfolio__problem-text">Monthly losses from insured events related to car damage reached
+										6.5 thousand dollars. Losses from cars not issued to the client and inappropriate payments to staff
+										amounted to at least $4,000. Which amounted to more than 120 thousand dollars a year.</p>
+								</div>
+								<div class="portfolio__bottom-content portfolio-content">
+									<h6 class="portfolio-content__title">Pilot Telematics</h6>
+									<div class="portfolio-content__sub-title">Insured events decreased to 4-6 thousand dollars</div>
+									<p class="portfolio-content__text">Implemented Pilot application with Logistics and Pilot Tusk Manager
+										(PTM) modules. Thanks to them, AVIS employees began to receive accurate information about where to
+										pick up the car, where to drive it away and where to give it to the client. At the same time,
+										photographic fixation of the state </p>
+												<p class="portfolio-content__text">
+									of the car was carried out both at the time of issue of the vehicle to the client and at the time of
+									return. All relationships between the client and AVIS (including the signing of documents on the
+									employee's smartphone screen) have been transferred to the Pilot system.</p>
+								</div>
+						
+							</div>
+							<div class="portfolio__bottom-item">
+								<div class="portfolio__problem desc">
+									<h6 class="portfolio__problem-title">PROBLEM</h6>
+									<p class="portfolio__problem-text">Regular break-ins of towers led to the theft<br>
+										of equipment. The damage was up to 85 thousand dollars a year.</p>
+								</div>
+								<div class="portfolio__bottom-content portfolio-content">
+									<h6 class="portfolio-content__title">PILOT PERIMETR</h6>
+									<div class="portfolio-content__sub-title">Damage reduced to 0</div>
+									<p class="portfolio-content__text">The perimeter of the tower is equipped with seismic sensors that
+										detect movement, attempted burglary. The tower is equipped with smart video surveillance cameras
+										that detect illegal entry and send signals to the Pilot platform. At the same time, the dispatcher
+										has a system for responding to non-standard situations.</p>
+								</div>
+							</div>
+						</div>
+						<a class="portfolio__link btn-free mob-2" href="/">see more cases</a>
+					</div>
+				</div>
+	</section>
+	</main>
+	<footer class="footer">
 
 </footer>
-		</div>
-	
-		<script src="js/app.min.js?_v=20221228074530"></script>
-	</body>
+	</div>
+
+	<script src="js/app.min.js?_v=20221228093930"></script>
+</body>
+
 </html>
