--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221228093930">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221228132323">
 	<title>Главная</title>
 </head>
 
@@ -69,7 +69,7 @@
 							<h1 class="banner-main__title">pilot telematics</h1>
 							<p class="banner-main__sub-title">IoT software and hardware Solutions</p>
 						</div>
-						<picture><source srcset="img/main.webp" type="image/webp"><img class="banner-main__img" src="img/main.png" alt="pilot telematics"></picture>
+						<img class="banner-main__img" src="img/main.png" alt="pilot telematics">
 						<div class="banner-main__btns">
 							<a class="banner-main__btn1 btn-free" href="/">Try it free</a>
 							<a class="banner-main__btn2 btn-more" href="/">About products</a>
@@ -147,8 +147,8 @@
 			<div class="gallery">
 				<div class="container gallery__container">
 					<div class="gallery__body">
-						<picture><source srcset="img/main.webp.webp" type="image/webp"><img class="gallery__img" src="img/main1jpg.jpg" alt="PICTURE"></picture>
-						<picture><source srcset="img/main2.webp" type="image/webp"><img class="gallery__img" src="img/main2.jpg" alt="PICTURE"></picture>
+						<img class="gallery__img" src="img/main1jpg.jpg" alt="PICTURE">
+						<img class="gallery__img" src="img/main2.jpg" alt="PICTURE">
 					</div>
 					<a class="gallery__link btn-free" href="/">try it for free</a>
 				</div>
@@ -231,14 +231,104 @@
 						<a class="portfolio__link btn-free mob-2" href="/">see more cases</a>
 					</div>
 				</div>
-	</section>
+		</section>
+		<section class="form">
+			<div class="container">
+				<div class="form__body">
+					<div class="form__body-top">
+						<h3 class="form__title">HOW TO CONNECT PILOT?</h4>
+						<div class="form__sub-title">Leave a request and our manager will contact you to connect a free trial period.</div>
+					</div>
+					<div class="form__text">We will call you back within 2 business hours. Let's discuss the problems, outline the solutions.</div>
+					<div class="form__wrap">
+						<input class="form__inp" type="text" placeholder="Your name">
+						<input class="form__inp" type="text" placeholder="Your  phone">
+						<button class="form__btn btn-free">Sent contact</button>
+						<label class="form__check" for="check">
+							<span class="form__check-span">Im agree with....</span>
+							<input class="form__check-inp" id="check" type="checkbox" name="check">
+						</label>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer class="footer">
-
+	<div class="container">
+		<div class="footer__body">
+			<div class="footer__top">
+				<h3 class="footer__title">You have any questions?</h3>
+				<div class="footer__top-block">
+					<div class="footer__contact">
+						<div class="footer__contact-title">CONTACTS</div>
+						<div class="footer__contact-items">
+							<div class="footer__contact-item ">
+								<span class="footer__item-span">Our Email</span>
+								<a class="footer__item-link" href="mailto:info@pilot-telematics.com">info@pilot-telematics.com</a>
+							</div>
+							<div class="footer__contact-item adress">
+								<span class="footer__item-span">Our Adress</span>
+								<a class="footer__item-link" href="mailto:info@pilot-telematics.com">2 Bulevar Džordža Vašingtona, Podgorica, Montenegro
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="footer__news">
+						<span class="footer__news-title">Get the fresh news from our company
+						</span>
+						<div class="footer__news-form">
+							<input class="footer__news-inp" type="text">
+							<button class="footer__news-btn">Subscribe</button>
+						</div>
+					</div>
+					<span class="copy mob">Copyright 2022 Pilot Telematics</span>
+				</div>
+			
+			</div>
+			<div class="footer__bottom">
+				<div class="footer__first">
+					<a class="footer__logo" href="/"><img src="img/logo.svg" alt="LOGO"></a>
+					<div class="footer__social">
+						<a class="footer__social-link" href="/"><img src="img/youtube.svg" alt="youtube"></a>
+						<a class="footer__social-link" href="/"><img src="img/in.svg" alt="in"></a>
+					</div>
+					<span class="copy">Copyright 2022 Pilot Telematics</span>
+				</div>
+				
+				<div class="footer__bottom-blocks">
+					<div class="footer__bottom-list">
+						<span class="footer__liist-title">PRODUCTS</span>
+						<ul class="footer__list">
+							<li><a class="footer__list-link" href="/">Pilot Telematics</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Logistics</a></li>
+							<li><a class="footer__list-link" href="/">Pilot People</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Developer</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Video</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Home</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Garm</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Qoolbit</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Autoconductor</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Perimetrt</a></li>
+						</ul>
+					</div>
+					<div class="footer__bottom-list">
+						<span class="footer__liist-title">COMPANY</span>
+						<ul class="footer__list">
+							<li><a class="footer__list-link" href="/">About company</a></li>
+							<li><a class="footer__list-link" href="/">Portfolio</a></li>
+							<li><a class="footer__list-link" href="/">Blog</a></li>
+							<li><a class="footer__list-link" href="/">Pilot Developer</a></li>
+							<li><a class="footer__list-link" href="/">For partners</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221228093930"></script>
+	<script src="js/app.min.js?_v=20221228132323"></script>
 </body>
 
 </html>
